NetworkPolicy/allow_8080.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-8080
spec:
 podSelector:
   matchLabels:
     app: userreg
 ingress:
 - ports:
   - protocol: TCP
     port: 8080
