NetworkPolicy/allow_8080_userreg.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-8080-userregsvc
spec:
 podSelector:
   matchLabels:
     app: userregsvc
 ingress:
 - ports:
   - protocol: TCP
     port: 8080
