NetworkPolicy/deny_all.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: deny-all
spec:
 podSelector:
 ingress: []
